<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tugas2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nama"
                android:textSize="@dimen/kiri" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Daniel"
                android:onClick="openTugas2Activity" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/kiri"
                android:text="@string/studentID" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:justificationMode="inter_word"
                android:textSize="@dimen/input"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/kiri"
                android:text="@string/jurusan" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:justificationMode="inter_word"
                android:textSize="@dimen/input"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/kiri"
                android:text="@string/hobi" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:justificationMode="inter_word"
                android:textSize="@dimen/input"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/oke" />


        </LinearLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/submit"
            android:layout_margin="16dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>